# liber-modestus

./: .envrc  .gitignore  .gitmodules  devenv.nix
backend/: README.md  feast_names.yaml  main.py  pyproject.toml
backend/migrations/: 001_initial_scriptura.sql  osis_books.toml.example
backend/src/api/: api.py  schema.py
backend/src/captator/: __init__.py  assembly.py  fetch_text.py  options.py
backend/src/captator/directorium/: __init__.py  occurrence.py  tables.py
backend/src/captator/parser/: README.md  __init__.py  divinum_officium.lark  lexer.py  parser.py  tokenizer.py  transformer.py
backend/src/captator/resolver/: README.md  __init__.py  config.py  evaluator.py  resolve.py
backend/src/horae/: __init__.py  calc.py
backend/src/sacrum/captator/: assembly.py  fetch_text.py  options.py
backend/src/sacrum/captator/directorium/: README.md  __init__.py  occurrence.py
backend/src/sacrum/captator/parser/: __init__.py  ast_nodes.py
backend/src/sacrum/captator/resolver/: resolve.py
backend/src/sacrum/tempus/: calc.py
backend/src/scriptura/: __init__.py  canon.py  locales.py  osis_to_sql.py  parse.py  types.py
backend/src/tempus/: calc.py
backend/tests/: test_assembly.py  test_captator.py  test_captator_parser.py  test_captator_parser_tokenizer.py  test_captator_resolver.py  test_directorium.py  test_horae.py  test_options.py  test_scriptura.py  test_tempus.py  test_time.py
