[project]
name = "liber-modestus"
version = "0.1.0"
description = "Backend for Liber Modestus: Yet Another 1962 Roman Catholic Missal for the Traditional Latin Mass"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark>=1.2.2",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
    "types-python-dateutil>=2.9.0.20250822",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
timeout = 5

[tool.ty.environment]
extra-paths = ["./src"]

[tool.mypy]
mypy_path = "./src"
